force-app/main/default/objects/Product_Contract_Template__c/Product_Contract_Template__c.object-meta.xml
<CustomObject>
    <label>Product Contract Template</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Contract Templatess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>