force-app/main/default/objects/Product_Contract_Template__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Attached Agreement</fullName>
            </value>
            <value>
                <fullName>Statement of Work (SOW)</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>