force-app/main/default/objects/Product_Contract_Template__c/fields/Contract_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category_1__c</fullName>
    <label>Contract Category 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asset Tracking</fullName>
            </value>
            <value>
                <fullName>Click-Thru Global Apps</fullName>
            </value>
            <value>
                <fullName>Critical Event Video</fullName>
            </value>
            <value>
                <fullName>Dom. Perpetual</fullName>
            </value>
            <value>
                <fullName>Dom. Term</fullName>
            </value>
            <value>
                <fullName>Global Application Terms</fullName>
            </value>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>MCP100S</fullName>
            </value>
            <value>
                <fullName>MCP100S (UVP)</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP100T (UVP)</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP110 (UVP)</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP200 (UVP)</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>PPS (Predictive Performance Service)</fullName>
            </value>
            <value>
                <fullName>Product Evaluation</fullName>
            </value>
            <value>
                <fullName>Pro Svcs</fullName>
            </value>
            <value>
                <fullName>RN SaaS</fullName>
            </value>
            <value>
                <fullName>RN Telematics/SaaS (Lease)</fullName>
            </value>
            <value>
                <fullName>RN Telematics/SaaS (Purchase)</fullName>
            </value>
            <value>
                <fullName>RN Telematics (Lease)</fullName>
            </value>
            <value>
                <fullName>RN Telematics (Purchase)</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Sylectus</fullName>
            </value>
            <value>
                <fullName>TT150</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>Untethered Asset Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>