force-app/main/default/objects/Product_Contract_Template__c/fields/Contract_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category_2__c</fullName>
    <label>Contract Category 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accident Severity</fullName>
            </value>
            <value>
                <fullName>Advanced Mapping Interface</fullName>
            </value>
            <value>
                <fullName>AMBER Alert</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Application Contingency</fullName>
            </value>
            <value>
                <fullName>BoBo</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>CoPilot Truck</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Critical Event Video</fullName>
            </value>
            <value>
                <fullName>Driver Fatigue</fullName>
            </value>
            <value>
                <fullName>Driver Recruiting</fullName>
            </value>
            <value>
                <fullName>Driver Retention</fullName>
            </value>
            <value>
                <fullName>Driver Risk (Workers Comp)</fullName>
            </value>
            <value>
                <fullName>Driver Safety</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>DTTS (In-Cab)</fullName>
            </value>
            <value>
                <fullName>DTTS (Trailer)</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Evaluation (Special Program)</fullName>
            </value>
            <value>
                <fullName>Exact Fuel</fullName>
            </value>
            <value>
                <fullName>Extended Productivity</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>Fault Monitoring + Ext. Faults</fullName>
            </value>
            <value>
                <fullName>FM Extended Faults</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>