force-app/main/default/objects/Product_Contract_Template__c/fields/Contract_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Template_Id__c</fullName>
    <label>Contract Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>