force-app/main/default/objects/Product_Contract_Template__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <label>Legal Entity Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omnitracs, LLC</fullName>
            </value>
            <value>
                <fullName>Omnitracs Canada, Inc.</fullName>
            </value>
            <value>
                <fullName>Corp. Nacional de Radiodeterminacion</fullName>
            </value>
            <value>
                <fullName>Omnitracs de Mexico, S.A. de C.V.</fullName>
            </value>
            <value>
                <fullName>OmniService S.A. de C.V.</fullName>
            </value>
            <value>
                <fullName>Roadnet Technologies, Inc.</fullName>
            </value>
            <value>
                <fullName>XRS Corporation</fullName>
            </value>
            <value>
                <fullName>Turnpike Global Technologies, Inc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>