force-app/main/default/objects/Product_Contract_Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Output Eval Template</fullName>
            </value>
            <value>
                <fullName>Output MSA Template</fullName>
            </value>
            <value>
                <fullName>Output Schedule Template</fullName>
            </value>
            <value>
                <fullName>Output Standard SOW Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>