force-app/main/default/objects/Product_Contract_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Contract_Category_1__c</columns>
    <columns>Contract_Category_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>